# revived_comfyui_image_metadata_extension

./: README.md  pyproject.toml
.github/workflows/: publish.yml
modules/: __init__.py  capture.py  hook.py  trace.py
modules/defs/: captures.py  validators.py
modules/defs/ext/: SantodanNodes.py
modules/nodes/: node.py
