[project]
name = "revived_comfyui_image_metadata_extension"
description = "Custom node for ComfyUI. It adds additional metadata for saved images, ensuring compatibility with the Civitai website."
version = "1.4.1"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/santodan/revived_comfyui_image_metadata_extension"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "santodan"
DisplayName = "revived_comfyui_image_metadata_extension"
Icon = ""
